desarrollando servicios , producto y nosotros , arerglando errores y responsive

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -77,12 +77,22 @@
         <!--formularios-->
         <div class="blanco formnNye">
             <form action="" class="marginform">
-                <label for="nombre" >Nombre Completo</label>
-                <input type="text" name="nombre" id="nombre" placeholder="Nombre" > <br>
-                <label for="años">Edad</label>
-                <input  type="number" name="años" id="años" placeholder="Edad"><br>
-                <label for="Correo electronico">Correo electronico</label>
+                <label for="nombre" >Nombre Completo:</label> <br>
+                <br>
+                <input type="text" class="field" name="nombre" id="nombre" placeholder="Nombre" > <br>
+                <br>
+                <label for="años">Edad:</label> <br>
+                <br>
+                <input  type="number" class="field" name="años" id="años" placeholder="Edad"> <br>
+                <br>
+                <label for="Correo electronico">Correo electronico:</label> <br>
+                <br>
                 <input type="text" placeholder="tucorreo@tucorreo">
+                <br>
+                <br>
+                <input type="submit" class="btn btn-blue" value="Enviar"> 
+                <input type="reset" class="btn btn-blue"  value="Resetear">
+
                  
             </form>
 
@@ -94,10 +104,10 @@
             <div class="blanco formComentario">
                 <form action="" class="marginformC">
                     <label for="COMENTARIOS">DEJANOS TUS COMENTARIOS</label><br>
-                    <textarea name="COMENTARIOS" id="comentarios" cols="50" rows="8" placeholder="escriba aqui"></textarea>
+                    <textarea name="COMENTARIOS" class="field" id="comentarios" cols="50" rows="8" placeholder="escriba aqui"></textarea>
                     <br> <!--linea -->
-                        <input type="submit" value="enviar"> 
-                        <input type="reset" value="resetear">
+                        <input type="submit" class="btn btn-blue"  value="Enviar"> 
+                        <input type="reset" class="btn btn-blue"  value="Resetear">
                 </form>
           </div> 
                
