--- a/pages/producto.html
+++ b/pages/producto.html
@@ -106,6 +106,54 @@
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa laboriosam ipsam officia consequatur vero dolorem voluptatibus, dolore ullam provident sequi repudiandae id nostrum error odio natus maxime corrupti? Libero, ratione.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut pariatur facilis accusantium dolore quibusdam tempora iste eius dolores! Aspernatur, amet ratione itaque perferendis beatae voluptate ullam non nihil magnam consequuntur.
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa laboriosam ipsam officia consequatur vero dolorem voluptatibus, dolore ullam provident sequi repudiandae id nostrum error odio natus maxime corrupti? Libero, ratione.</p>
       </div>
+
+
+
+      <!--apertura cards-->
+
+      <div class="container">
+        <div class="cards">
+            <figure>
+                <img src="../assets/img/jeans.jpg" alt="jeans">
+            </figure>
+            <div class="contenido">
+                <h3>JEANS</h3>
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quae impedit rem. Sequi explicabo hic, dignissimos corrupti, accusantium molestiae quae molestias, facilis ad excepturi laborum cum sed quasi ratione atque.</P>
+                <a href="#">Ver mas</a>
+            </div>
+        </div>
+        <div class="cards">
+            <figure>
+                <img src="../assets/img/camisas.jpg" alt="camisas">
+            </figure>
+            <div class="contenido">
+                <h3>CAMISAS</h3>
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quae impedit rem. Sequi explicabo hic, dignissimos corrupti, accusantium molestiae quae molestias, facilis ad excepturi laborum cum sed quasi ratione atque.</P>
+                <a href="#">Ver mas</a>
+            </div>
+        </div>
+        <div class="cards">
+            <figure>
+                <img src="../assets/img/zapatos.jpg" alt="zapatos">
+            </figure>
+            <div class="contenido">
+                <h3>ZAPATOS</h3>
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quae impedit rem. Sequi explicabo hic, dignissimos corrupti, accusantium molestiae quae molestias, facilis ad excepturi laborum cum sed quasi ratione atque.</P>
+                <a href="#">Ver mas</a>
+            </div>
+        </div>
+        <div class="cards">
+            <figure>
+                <img src="../assets/img/lentes.jpg" alt="lentes">
+            </figure>
+            <div class="contenido">
+                <h3>LENTES</h3>
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quae impedit rem. Sequi explicabo hic, dignissimos corrupti, accusantium molestiae quae molestias, facilis ad excepturi laborum cum sed quasi ratione atque.</P>
+                <a href="#">Ver mas</a>
+            </div>
+        </div>
+      </div>
+
      
 
   </main>
